# zwie

./: .gitignore  404.html  CNAME  README.md  build.gradle.kts  gradle.properties  index.html  manifest.webmanifest  service-worker.js  settings.gradle.kts  settings.html  vite-manifest.json
new_server/: .gitignore  Cargo.toml
new_server/src/: channel.rs  cli.rs  main.rs
new_server/src/server/: channel.rs  mod.rs  user.rs
relay/: Cargo.toml  build.gradle.kts
relay/src/: main.rs
server/: Cargo.toml  build.gradle.kts  detekt-baseline.xml
server/src/: main.rs
server/src/main/kotlin/de/phyrone/zwie/server/: Main.kt  ShutdownHandler.kt  SocketJsConnectionWrapper.kt  UniqeEntity.kt  User.kt  UserConnection.kt  WRTCGateModule.kt  WebServerHandler.kt  ZwieServerApplication.kt  utils.kt
server/src/main/kotlin/de/phyrone/zwie/server/channel/: Channel.kt  ChannelLayout.kt  ChannelManager.kt  ChannelPersistence.kt  ZChannel.kt  ZChannelLayoutNode.kt  ZChannelManager.kt
server/src/main/kotlin/de/phyrone/zwie/server/chat/: AbstractChatMessage.kt  ChatParticipant.kt  ChatReceiver.kt  ChatSender.kt  SimpleTextChatMessage.kt
server/src/main/kotlin/de/phyrone/zwie/server/command/: BasicCommands.kt  ChannelCommandsModule.kt  ComandsCoreModule.kt  CommandCollector.kt  CommandComponents.kt  CommandContext.kt  DatabaseCommandsModule.kt  TerminalCommandContext.kt
server/src/main/kotlin/de/phyrone/zwie/server/data/: ChannelData.kt  ChannelLayout.kt  DataChannel.kt  DataChannelLayout.kt
server/src/main/kotlin/de/phyrone/zwie/server/database/: ChannelType.kt  ChannelsTable.kt  ChatMessagesTable.kt  Database.kt  DatabaseModule.kt  IndexTable.kt  UsersTable.kt
server/src/main/kotlin/de/phyrone/zwie/server/event/: CanceableEvent.kt  CancelableEvent.kt  ComponentInitEvent.kt  EventListener.kt  KoinStartupDoneEvent.kt  MainThreadStartedEvent.kt  PreShutdownEvent.kt  StartupDoneEvent.kt  UserJoinEvent.kt  UserJoinedEvent.kt  UserLeaveEvent.kt  UserPreChatMessageSendEvent.kt  UserSessionCreatedEvent.kt  WebSetupEvent.kt
server/src/main/kotlin/de/phyrone/zwie/server/instance/: ServerInstance.kt
server/src/main/kotlin/de/phyrone/zwie/server/main/: BootstrapTask.kt  Main.kt  ServerFeature.kt  StartupArguments.kt
server/src/main/kotlin/de/phyrone/zwie/server/misc/: ConfigModule.kt  DefaultServerMainDispatcherFactory.kt  EventBusLogger.kt  EventLogger.kt  InstanceLoader.kt  MainThreadExecutor.kt  RSocketFLoggerFactory.kt  SchedulerModule.kt  ShutdownManager.kt  SlfKoinLogger.kt  StringEntity.kt
server/src/main/kotlin/de/phyrone/zwie/server/module/: CommonModule.kt  DependencyFailedException.kt  DependsOn.kt  DisableTaskRunner.kt  EnableTaskRunner.kt  Module.kt  ModuleLoader.kt  ModuleMetadata.kt  ModuleOrder.kt  ModuleTaskHandler.kt
server/src/main/kotlin/de/phyrone/zwie/server/network/: LowTextIncommingPacket.kt  LowTextOutgoingPacket.kt  UserConnection.kt  WebSocketJsonUserConnection.kt  const.kt
server/src/main/kotlin/de/phyrone/zwie/server/othermodules/: CommonComponents.kt  ConfigModule.kt  SchedulerModule.kt
server/src/main/kotlin/de/phyrone/zwie/server/scheduler/: CleanupDeletedChatMessagesJob.kt  SchedulerJob.kt  SchedulerManager.kt
server/src/main/kotlin/de/phyrone/zwie/server/terminal/: DefaultRichTerminalFeatures.kt  DefaultTerminalCommandHandler.kt  PromtFixer.kt  TerminalCommandHandler.kt  TerminalComponents.kt  TerminalModule.kt  TerminalRunner.kt
server/src/main/kotlin/de/phyrone/zwie/server/user/: BackingSessionData.kt  DisconnectReason.kt  OfflineUser.kt  User.kt  UserConnection.kt  UserImpl.kt  UserManager.kt  ZUser.kt  ZUserManager.kt  ZUserManagerModule.kt  ZUserSession.kt
server/src/main/kotlin/de/phyrone/zwie/server/utils/: DHT.kt  DefaultMutableEventfultSet.kt  DefaultReadWriteMutex.kt  EventBusLogger.kt  JsonComponent.kt  JsonIndex.kt  KoinLogger.kt  LineOutputStream.kt  MutableContainer.kt  MutableSubscriberSet.kt  ReadWriteMutex.kt  ReadWriteMutexExt.kt  SharedMutex.kt  SubscriberSet.kt  SuspendClosable.kt  autoloader.kt  cost.kt  ext.kt  scheduler_utils.kt  utils.kt
server/src/main/kotlin/de/phyrone/zwie/server/vserver/: BackingSessionData.kt  ZChannel.kt  ZChannelLayoutNode.kt  ZChannelManager.kt  ZUser.kt  ZUserManager.kt  ZUserManagerModule.kt  ZUserSession.kt
server/src/main/kotlin/org/greenrobot/eventbus/: MainThreadSupportHack.kt
server/src/main/resources/: application.yml  defaults.conf  logback.xml
(+2549 files in other folders)
