[package]
name = "zwie-server"
version = "0.0.1-DEV"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = { version = "2.3.0", features = ["threads"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "full", "macros"] }
log = { version = "0.4.17", features = ["max_level_trace","release_max_level_info"]}

openssl = { version = "0.10", features = ["v110", "v111"] }

webrtc = "0.4.0"

actix-web = { version = "4.1.0", features = ["openssl"] }
error-stack = "0.1.1"
anyhow = "1.0.62"
thiserror = "1.0.32"

deno_core = "0.148.0"


clap = { version = "3.2.17", features = ["env", "yaml", "cargo", "derive", "unicode", "color"] }
clap_complete = "3.2.4"
async-trait = "0.1.57"
