[package]
name = "zwie-server"
version = "0.0.1-DEV"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_info", "max_level_debug"] }
simple_logger = { version = "2.3.0", features = ["threads"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "full", "macros"] }


actix-web = { version = "4", features = ["openssl", "compress-gzip", "compress-zstd"] }
openssl = { version = "0.10", features = ["v110", "v111"] }
webrtc = "0.4.0"
deno_core = "0.148.0"
diesel = { version = "2.0.0", features = ["mysql", "32-column-tables", "64-column-tables", "128-column-tables","sqlite"] }
actix-web-actors = "4.1.0"
actix = "0.13.0"
rsocket_rust = "0.7.2"
rsocket_rust_transport_websocket = "0.7.3"
#sqlx = { version = "0.6.0", features = ["sqlite", "mysql","macros","runtime-tokio","uuid","runtime-tokio-rustls"] }

[lib]
crate-type = ["cdylib"]