[package]
name = "zwie-server"
version = "0.0.1-DEV"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_info", "max_level_debug"] }
simple_logger = { version = "2.2.0", features = ["threads"] }
tokio = { version = "1.20.0", features = ["rt-multi-thread", "full", "macros"] }


actix-web = { version = "4", features = ["openssl", "compress-gzip", "compress-zstd"] }
openssl = { version = "0.10", features = ["v110", "v111"] }
webrtc = "0.4.0"
deno_core = "0.143.0"
diesel = { version = "1.4.8", features = ["mysql", "32-column-tables", "64-column-tables", "128-column-tables","sqlite"] }
#sqlx = { version = "0.6.0", features = ["sqlite", "mysql","macros","runtime-tokio","uuid","runtime-tokio-rustls"] }
